--- a/preamble.tex
+++ b/preamble.tex
@@ -92,9 +92,11 @@
 \newcommand{\mHplus}{$m_{\PHiggs^{+}}$}
 \newcommand{\mh}{$m_{\PHiggslight}$}
 \newcommand{\pT}{$p_{\text{T}}$}
+\newcommand{\pTm}{p_{\text{T}}}
 \newcommand{\kT}{$k_{\text{T}}$}
 \newcommand{\ET}{$E_{\text{T}}$}
 \newcommand{\mT}{$m_{\text{T}}$}
+\newcommand{\mTm}{m_{\text{T}}}
 \newcommand{\mTtot}{$m_{\text{T}}^{\text{tot}}$}
 \newcommand{\MET}{$E_{\text{T}}^{\text{miss}}$}
 \DeclareRobustCommand{\protonproton}{\Pproton\Pproton\xspace}
