Adding combined model interpretations

--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -1978,7 +1978,32 @@ improves on those limits by between a few per cent at high mass up to 40\% at lo
 \label{fig:mssm_results_combination_limits_comp}
 \end{figure}
 
-Interpretations in MSSM benchmark scenarios to be added.
+Figure \ref{fig:mssm_mhmodp_20152016}a shows the exclusion obtained in the $m_{\PHiggslight}^{\text{mod+}}$ 
+scenario by combining the 2015 and 2016 analyses. Figure \ref{fig:mssm_mhmodp_20152016}b shows this exclusion
+in the hMSSM scenario. On both figures the expected and observed exclusion from the
+2016 analysis only are overlaid, which shows how the combination increases the
+size of the excluded area. In the hMSSM scenario the feature already visible in figure \ref{fig:mssm_mhmodp_2016}b
+has grown by combining the two datasets. Future analyses using even more data will be able to fully close
+the gap between the two excluded regions.
+
+\begin{figure}[h!]
+\begin{center}
+\subfloat[$m_{\PHiggslight}^{\text{mod}+}$ scenario]{\includegraphics[width=0.6\textwidth]{./MSSM/Figures/mssm_combination_mhmodp_cmb.pdf}}~\\
+\subfloat[hMSSM scenario]{\includegraphics[width=0.6\textwidth]{./MSSM/Figures/mssm_combination_hMSSM_cmb.pdf}}
+\end{center}
+\caption[Exclusion in the $m_{\PHiggslight}^{\text{mod+}}$ scenario and the hMSSM
+scenario of the combination of the 2015 and 2016 \AHtotautau analyses.]{Exclusion in (a) the $m_{\PHiggslight}^{\text{mod}+}$ scenario and (b) the hMSSM scenario 
+obtained by the combination
+of all channels of the 2015 and 2016 \AHtotautau analyses. The blue shaded area bounded by the 
+solid black line is the observed exclusion, with the dashed black line the
+expected exclusion. The light and dark grey bands indicate
+the $\pm 1\sigma$ (68\%) and $\pm 2\sigma$ (95\%) probability intervals on the expected limit.
+The red shaded area in the $m_{\PHiggslight}^{\text{mod}+}$ figure
+is excluded by the lack of a light Higgs boson with mass compatible with $125\,\GeV$. The dashed (solid)
+blue lines indicate the expected (observed) exclusion from the 2016 analysis alone.}
+\label{fig:mssm_mhmodp_20152016}
+\end{figure}
+
 
 
 
